--- a/lib/lang.toml
+++ b/lib/lang.toml
@@ -58,6 +58,7 @@ warning = "Avertissement"
 error = "Erreur"
 example = "Exemple"
 quote = "Citation"
+goals = "Objectifs"
 
 [lang.zh]
 abstract = "摘要"
